{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 6,
  "lineage": "fd0ab6fd-d6bb-cf30-6ad8-4745028a54b7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010f7c9508f947e26",
            "arn": "arn:aws:ec2:ap-south-1:235881042926:elastic-ip/eipalloc-010f7c9508f947e26",
            "domain": "vpc",
            "id": "eipalloc-010f7c9508f947e26",
            "network_border_group": "ap-south-1",
            "private_dns": "ip-172-19-1-198.ap-south-1.compute.internal",
            "public_dns": "ec2-3-109-111-122.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.111.122",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "flywhl-aps-pub-1-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-pub-1-dev"
            }
          }
        },
        {
          "index_key": "pub2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0694612f0a3583bd7",
            "arn": "arn:aws:ec2:ap-south-1:235881042926:elastic-ip/eipalloc-0694612f0a3583bd7",
            "domain": "vpc",
            "id": "eipalloc-0694612f0a3583bd7",
            "network_border_group": "ap-south-1",
            "private_dns": "ip-172-19-2-100.ap-south-1.compute.internal",
            "public_dns": "ec2-13-127-57-181.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.57.181",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "flywhl-aps-pub-2-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-pub-2-dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:235881042926:internet-gateway/igw-03431fb607972e185",
            "id": "igw-03431fb607972e185",
            "owner_id": "235881042926",
            "region": "ap-south-1",
            "tags": {
              "Name": "flywhl-aps-igw-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-igw-dev"
            },
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010f7c9508f947e26",
            "association_id": "eipassoc-0de96d775b33d09ce",
            "connectivity_type": "public",
            "id": "nat-0d89c769169a05bfc",
            "network_interface_id": "eni-03486908641b28905",
            "private_ip": "172.19.1.171",
            "public_ip": "3.109.111.122",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bb4318d467b0c928",
            "tags": {
              "Name": "flywhl-aps-ngw-pub-1-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-ngw-pub-1-dev"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "pub2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0694612f0a3583bd7",
            "association_id": "eipassoc-0d4870aa27394aac6",
            "connectivity_type": "public",
            "id": "nat-00d44656e73857f8c",
            "network_interface_id": "eni-078fb60b06d54cdce",
            "private_ip": "172.19.2.61",
            "public_ip": "13.127.57.181",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a80eb517e8953646",
            "tags": {
              "Name": "flywhl-aps-ngw-pub-2-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-ngw-pub-2-dev"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "priv1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:235881042926:route-table/rtb-003583b5b2c921624",
            "id": "rtb-003583b5b2c921624",
            "owner_id": "235881042926",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d89c769169a05bfc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flywhl-aps-pvtrt-prvt-1-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-pvtrt-prvt-1-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "priv2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:235881042926:route-table/rtb-03c3eea64a86130c8",
            "id": "rtb-03c3eea64a86130c8",
            "owner_id": "235881042926",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00d44656e73857f8c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flywhl-aps-pvtrt-prvt-2-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-pvtrt-prvt-2-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:235881042926:route-table/rtb-092e78ee8c4c66777",
            "id": "rtb-092e78ee8c4c66777",
            "owner_id": "235881042926",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03431fb607972e185",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flywhl-aps-pubrt-pub-1-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-pubrt-pub-1-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "pub2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:235881042926:route-table/rtb-033824a98e2e165d2",
            "id": "rtb-033824a98e2e165d2",
            "owner_id": "235881042926",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03431fb607972e185",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flywhl-aps-pubrt-pub-2-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-pubrt-pub-2-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "priv1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d52403a02e38517",
            "region": "ap-south-1",
            "route_table_id": "rtb-003583b5b2c921624",
            "subnet_id": "subnet-03bd68873dbab65df"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private-route-table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "priv2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0626aee0087349dfd",
            "region": "ap-south-1",
            "route_table_id": "rtb-03c3eea64a86130c8",
            "subnet_id": "subnet-0cf0e77fd3ee5955a"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private-route-table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcc6edc32f8ee04e",
            "region": "ap-south-1",
            "route_table_id": "rtb-092e78ee8c4c66777",
            "subnet_id": "subnet-0bb4318d467b0c928"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "pub2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094c6a3ec0d92bc4e",
            "region": "ap-south-1",
            "route_table_id": "rtb-033824a98e2e165d2",
            "subnet_id": "subnet-0a80eb517e8953646"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "priv1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:235881042926:subnet/subnet-03bd68873dbab65df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.19.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bd68873dbab65df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "235881042926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "flywhl-aps-prvt-1-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-prvt-1-dev"
            },
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "priv2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:235881042926:subnet/subnet-0cf0e77fd3ee5955a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.19.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf0e77fd3ee5955a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "235881042926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "flywhl-aps-prvt-2-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-prvt-2-dev"
            },
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:235881042926:subnet/subnet-0bb4318d467b0c928",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.19.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb4318d467b0c928",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "235881042926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "flywhl-aps-pub-1-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-pub-1-dev"
            },
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "pub2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:235881042926:subnet/subnet-0a80eb517e8953646",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.19.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a80eb517e8953646",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "235881042926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "flywhl-aps-pub-2-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-pub-2-dev"
            },
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:235881042926:vpc/vpc-0e0f1d04a741af0bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.19.0.0/16",
            "default_network_acl_id": "acl-0eb56dba35cec304c",
            "default_route_table_id": "rtb-0fa0ded2e59734e43",
            "default_security_group_id": "sg-03bc1f8f5c4316b45",
            "dhcp_options_id": "dopt-036cda3b1da30fbff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e0f1d04a741af0bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa0ded2e59734e43",
            "owner_id": "235881042926",
            "region": "ap-south-1",
            "tags": {
              "Name": "flywhl-aps-vpc-dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-vpc-dev"
            }
          }
        }
      ]
    }
  ]
}